SUBDIRS = examples

EXTRA_DIST =                               \
	api/index.rst                      \
	credits.rst                        \
	index.rst                          \
	introduction.rst                   \
	plugins/building/buildsystem.rst   \
	plugins/building/index.rst         \
	plugins/building/pipeline.rst      \
	plugins/creating.rst               \
	plugins/devices.rst                \
	plugins/editor/autocompletion.rst  \
	plugins/editor/buffers.rst         \
	plugins/editor/diagnostics.rst     \
	plugins/editor/filesettings.rst    \
	plugins/editor/highlighting.rst    \
	plugins/editor/index.rst           \
	plugins/editor/snippets.rst        \
	plugins/greeter.rst                \
	plugins/headerbar.rst              \
	plugins/index.rst                  \
	plugins/keybindings.rst            \
	plugins/langserv.rst               \
	plugins/preferences.rst            \
	plugins/processes/index.rst        \
	plugins/processes/runtimes.rst     \
	plugins/processes/subprocesses.rst \
	plugins/running.rst                \
	plugins/search.rst                 \
	plugins/subprocesses.rst           \
	plugins/symbols/gotodef.rst        \
	plugins/symbols/index.rst          \
	plugins/symbols/rename.rst         \
	plugins/symbols/symbols.rst        \
	plugins/transfers.rst              \
	plugins/vcs.rst                    \
	plugins/workbench.rst              \
	plugins/workers.rst                \
	workbench.rst                      \
	$(NULL)

GITIGNOREFILES = _build

-include $(top_srcdir)/git.mk
