SUBDIRS = examples

EXTRA_DIST =                               \
	credits.rst                        \
	plugins/running.rst                \
	plugins/building/pipeline.rst      \
	plugins/building/buildsystem.rst   \
	plugins/building/index.rst         \
	plugins/keybindings.rst            \
	plugins/editor/highlighting.rst    \
	plugins/editor/buffers.rst         \
	plugins/editor/index.rst           \
	plugins/editor/snippets.rst        \
	plugins/editor/autocompletion.rst  \
	plugins/editor/filesettings.rst    \
	plugins/editor/diagnostics.rst     \
	plugins/transfers.rst              \
	plugins/workers.rst                \
	plugins/headerbar.rst              \
	plugins/greeter.rst                \
	plugins/langserv.rst               \
	plugins/index.rst                  \
	plugins/search.rst                 \
	plugins/symbols/index.rst          \
	plugins/symbols/symbols.rst        \
	plugins/symbols/rename.rst         \
	plugins/symbols/gotodef.rst        \
	plugins/devices.rst                \
	plugins/vcs.rst                    \
	plugins/creating.rst               \
	plugins/processes/runtimes.rst     \
	plugins/processes/subprocesses.rst \
	plugins/processes/index.rst        \
	plugins/workbench.rst              \
	plugins/preferences.rst            \
	exploring.rst                      \
	api/index.rst                      \
	index.rst                          \
	installation.rst                   \
	contributing.rst                   \
	$(NULL)

GITIGNOREFILES = _build

-include $(top_srcdir)/git.mk
