CLEANFILES =
DISTCLEANFILES =
BUILT_SOURCES =
EXTRA_DIST =

pkglibdir = $(libdir)/gnome-builder
pkglib_LTLIBRARIES = libide-1.0.la

libide_1_0_la_public_sources = \
	directory/ide-directory-build-system.c \
	directory/ide-directory-build-system.h \
	directory/ide-directory-vcs.c \
	directory/ide-directory-vcs.h \
	doap/ide-doap-person.c \
	doap/ide-doap-person.h \
	doap/ide-doap.c \
	doap/ide-doap.h \
	git/ide-git-remote-callbacks.c \
	git/ide-git-remote-callbacks.h \
	git/ide-git-vcs.c \
	git/ide-git-vcs.h \
	ide-back-forward-item.c \
	ide-back-forward-item.h \
	ide-back-forward-list.c \
	ide-back-forward-list.h \
	ide-buffer-change-monitor.c \
	ide-buffer-change-monitor.h \
	ide-buffer-manager.c \
	ide-buffer-manager.h \
	ide-buffer.c \
	ide-buffer.h \
	ide-build-result.c \
	ide-build-result.h \
	ide-build-system.c \
	ide-build-system.h \
	ide-builder.c \
	ide-builder.h \
	ide-completion-provider.c \
	ide-completion-provider.h \
	ide-context.c \
	ide-context.h \
	ide-debugger.c \
	ide-debugger.h \
	ide-deployer.c \
	ide-deployer.h \
	ide-device-manager.c \
	ide-device-manager.h \
	ide-device-provider.c \
	ide-device-provider.h \
	ide-device.c \
	ide-device.h \
	ide-diagnostic-provider.c \
	ide-diagnostic-provider.h \
	ide-diagnostic.c \
	ide-diagnostic.h \
	ide-diagnostician.c \
	ide-diagnostician.h \
	ide-diagnostics.c \
	ide-diagnostics.h \
	ide-enums.c \
	ide-enums.h \
	ide-executable.c \
	ide-executable.h \
	ide-executer.c \
	ide-executer.h \
	ide-extension-adapter.c \
	ide-extension-adapter.h \
	ide-extension-set-adapter.c \
	ide-extension-set-adapter.h \
	ide-file-settings.c \
	ide-file-settings.defs \
	ide-file-settings.h \
	ide-file.c \
	ide-file.h \
	ide-fixit.c \
	ide-fixit.h \
	ide-global.h \
	ide-highlight-engine.c \
	ide-highlight-engine.h \
	ide-highlight-index.c \
	ide-highlight-index.h \
	ide-highlighter.c \
	ide-highlighter.h \
	ide-indent-style.h \
	ide-indenter.c \
	ide-indenter.h \
	ide-log.c \
	ide-log.h \
	ide-macros.h \
	ide-object.c \
	ide-object.h \
	ide-pattern-spec.c \
	ide-pattern-spec.h \
	ide-process.c \
	ide-process.h \
	ide-progress.c \
	ide-progress.h \
	ide-project-file.c \
	ide-project-file.h \
	ide-project-files.c \
	ide-project-files.h \
	ide-project-info.c \
	ide-project-info.h \
	ide-project-item.c \
	ide-project-item.h \
	ide-project-miner.c \
	ide-project-miner.h \
	ide-project.c \
	ide-project.h \
	ide-recent-projects.c \
	ide-recent-projects.h \
	ide-refactory.c \
	ide-refactory.h \
	ide-script-manager.c \
	ide-script-manager.h \
	ide-script.c \
	ide-script.h \
	ide-search-context.c \
	ide-search-context.h \
	ide-search-engine.c \
	ide-search-engine.h \
	ide-search-provider.c \
	ide-search-provider.h \
	ide-search-result.c \
	ide-search-result.h \
	ide-service.c \
	ide-service.h \
	ide-settings.c \
	ide-settings.h \
	ide-source-location.c \
	ide-source-location.h \
	ide-source-map.c \
	ide-source-map.h \
	ide-source-range.c \
	ide-source-range.h \
	ide-source-snippet-chunk.c \
	ide-source-snippet-chunk.h \
	ide-source-snippet-context.c \
	ide-source-snippet-context.h \
	ide-source-snippet.c \
	ide-source-snippet.h \
	ide-source-snippets-manager.c \
	ide-source-snippets-manager.h \
	ide-source-snippets.c \
	ide-source-snippets.h \
	ide-source-view-mode.c \
	ide-source-view-mode.h \
	ide-source-view.c \
	ide-source-view.h \
	ide-symbol-resolver.c \
	ide-symbol-resolver.h \
	ide-symbol.c \
	ide-symbol.h \
	ide-symbol-node.c \
	ide-symbol-node.h \
	ide-symbol-tree.c \
	ide-symbol-tree.h \
	ide-target.c \
	ide-target.h \
	ide-test-case.c \
	ide-test-case.h \
	ide-test-suite.c \
	ide-test-suite.h \
	ide-thread-pool.c \
	ide-thread-pool.h \
	ide-types.h \
	ide-unsaved-file.c \
	ide-unsaved-file.h \
	ide-unsaved-files.c \
	ide-unsaved-files.h \
	ide-vcs-uri.c \
	ide-vcs-uri.h \
	ide-vcs.c \
	ide-vcs.h \
	ide.c \
	ide.h \
	local/ide-local-device.c \
	local/ide-local-device.h \
	theatrics/ide-animation.c \
	theatrics/ide-animation.h \
	$(NULL)

libide_1_0_la_SOURCES = \
	$(libide_1_0_la_public_sources) \
	autotools/ide-autotools-build-system.c \
	autotools/ide-autotools-build-system.h \
	autotools/ide-autotools-build-task.c \
	autotools/ide-autotools-build-task.h \
	autotools/ide-autotools-builder.c \
	autotools/ide-autotools-builder.h \
	autotools/ide-autotools-project-miner.c \
	autotools/ide-autotools-project-miner.h \
	autotools/ide-makecache-target.c \
	autotools/ide-makecache-target.h \
	autotools/ide-makecache.c \
	autotools/ide-makecache.h \
	editorconfig/editorconfig-glib.c \
	editorconfig/editorconfig-glib.h \
	editorconfig/ide-editorconfig-file-settings.c \
	editorconfig/ide-editorconfig-file-settings.h \
	gconstructor.h \
	git/ide-git-buffer-change-monitor.c \
	git/ide-git-buffer-change-monitor.h \
	gjs/ide-gjs-script.cpp \
	gjs/ide-gjs-script.h \
	gsettings/ide-gsettings-file-settings.c \
	gsettings/ide-gsettings-file-settings.h \
	gsettings/ide-language-defaults.c \
	gsettings/ide-language-defaults.h \
	ide-async-helper.c \
	ide-async-helper.h \
	ide-battery-monitor.c \
	ide-battery-monitor.h \
	ide-debug.h \
	ide-extension-util.c \
	ide-extension-util.h \
	ide-internal.h \
	ide-line-change-gutter-renderer.c \
	ide-line-change-gutter-renderer.h \
	ide-line-diagnostics-gutter-renderer.c \
	ide-line-diagnostics-gutter-renderer.h \
	ide-ref-ptr.c \
	ide-ref-ptr.h \
	ide-search-reducer.c \
	ide-search-reducer.h \
	ide-source-iter.c \
	ide-source-iter.h \
	ide-source-snippet-completion-item.c \
	ide-source-snippet-completion-item.h \
	ide-source-snippet-completion-provider.c \
	ide-source-snippet-completion-provider.h \
	ide-source-snippet-parser.c \
	ide-source-snippet-parser.h \
	ide-source-snippet-private.h \
	ide-source-view-capture.c \
	ide-source-view-capture.h \
	ide-source-view-movements.c \
	ide-source-view-movements.h \
	ide-vim-iter.c \
	ide-vim-iter.h \
	modelines/ide-modelines-file-settings.c \
	modelines/ide-modelines-file-settings.h \
	modelines/modeline-parser.c \
	modelines/modeline-parser.h \
	pygobject/ide-pygobject-script.c \
	pygobject/ide-pygobject-script.h \
	theatrics/ide-box-theatric.c \
	theatrics/ide-box-theatric.h \
	theatrics/ide-frame-source.c \
	theatrics/ide-frame-source.h \
	util/ide-cairo.c \
	util/ide-cairo.h \
	util/ide-doc-seq.c \
	util/ide-doc-seq.h \
	util/ide-line-reader.c \
	util/ide-line-reader.h \
	util/ide-pango.c \
	util/ide-pango.h \
	util/ide-rgba.c \
	util/ide-rgba.h \
	$(NULL)

libide_1_0_la_includes = \
	$(DEBUG_CFLAGS) \
	-DLIBDIR="\"$(libdir)\"" \
	-I$(top_builddir)/libide \
	-I$(top_srcdir)/contrib/egg \
	-I$(top_srcdir)/contrib/libeditorconfig \
	-I$(top_srcdir)/contrib/search \
	-I$(top_srcdir)/contrib/xml \
	-I$(srcdir) \
	-I$(srcdir)/autotools \
	-I$(srcdir)/directory \
	-I$(srcdir)/doap \
	-I$(srcdir)/editorconfig \
	-I$(srcdir)/git \
	-I$(srcdir)/gjs \
	-I$(srcdir)/gsettings \
	-I$(srcdir)/local \
	-I$(srcdir)/modelines \
	-I$(srcdir)/pygobject \
	-I$(srcdir)/resources \
	-I$(srcdir)/theatrics \
	-I$(srcdir)/util \
	$(NULL)

libide_1_0_la_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	$(libide_1_0_la_includes) \
	$(NULL)

libide_1_0_la_CFLAGS = \
	$(AM_CFLAGS) \
	$(LIBIDE_CFLAGS) \
	$(OPTIMIZE_CFLAGS) \
	$(DEBUG_CFLAGS) \
	$(libide_1_0_la_includes) \
	$(NULL)

libide_1_0_la_CXXFLAGS = \
	$(AM_CXXFLAGS) \
	$(LIBIDE_CFLAGS) \
	$(libide_1_0_la_includes) \
	$(OPTIMIZE_CFLAGS) \
	$(NULL)

libide_1_0_la_LDFLAGS = \
	$(OPTIMIZE_LDFLAGS) \
	-avoid-version \
	-no-undefined \
	-export-symbols-regex '^ide_.*' \
	$(NULL)

libide_1_0_la_LIBADD = \
	$(LIBIDE_LIBS) \
	$(SHM_LIB) \
	-lm \
	$(top_builddir)/contrib/egg/libegg.la \
	$(top_builddir)/contrib/libeditorconfig/libeditorconfig.la \
	$(top_builddir)/contrib/search/libsearch.la \
	$(top_builddir)/contrib/xml/libxml.la \
	$(NULL)

libide_1_0_la_built_sources = \
	resources/ide-resources.c \
	resources/ide-resources.h \
	$(NULL)


glib_enum_h = ide-enums.h
glib_enum_c = ide-enums.c
glib_enum_headers =  \
	doap/ide-doap.h \
	ide-buffer.h \
	ide-diagnostic.h \
	ide-highlighter.h \
	ide-indent-style.h \
	ide-source-view.h \
	ide-symbol.h \
	ide-thread-pool.h \
	$(NULL)
include $(top_srcdir)/build/autotools/Makefile.am.enums


glib_resources_c = resources/ide-resources.c
glib_resources_h = resources/ide-resources.h
glib_resources_xml = resources/libide.gresource.xml
glib_resources_namespace = ide
include $(top_srcdir)/build/autotools/Makefile.am.gresources

nodist_libide_1_0_la_SOURCES = \
	resources/ide-resources.c \
	resources/ide-resources.h \
	$(NULL)


-include $(INTROSPECTION_MAKEFILE)

INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ARGS = --add-include-path=$(srcdir) --warn-all
INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)

if HAVE_INTROSPECTION
introspection_sources = \
	$(libide_1_0_la_public_sources) \
	$(NULL)

Ide-1.0.gir: libide-1.0.la
Ide_1_0_gir_INCLUDES = Gio-2.0 GtkSource-3.0 Ggit-1.0 Peas-1.0
Ide_1_0_gir_CFLAGS = $(libide_1_0_la_CFLAGS)
Ide_1_0_gir_LIBS = libide-1.0.la
Ide_1_0_gir_FILES = $(introspection_sources)
Ide_1_0_gir_SCANNERFLAGS = \
	--c-include="ide.h" \
	-n Ide \
	$(NULL)
INTROSPECTION_GIRS += Ide-1.0.gir

girdir = $(datadir)/gir-1.0
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(pkglibdir)/girepository-1.0
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)
endif

-include $(top_srcdir)/git.mk
